Updated BareBonesBrowserLaunch.